Finished 3D added htmland CSS

--- a/index.html
+++ b/index.html
@@ -2,12 +2,107 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Torus spinner</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
+
+    <main>
+      <header>
+        <h1>Marcus Reineck</h1>
+        <p>🚀 Welcome to my space!</p>
+      </header>
+
+      <blockquote>
+        <p>I am a junior Frontend developer and I create things</p>
+      </blockquote>
+
+      <section>
+        <h2>📜 Who am I?</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+
+      <section class="light">
+        <h2>👩🏽‍🚀 Projects</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <h2>💻 Skillset</h2>
+
+        <p>
+          I have worked with HTML, CSS, JavaScript, Typescript, NodeJS, GraphQL,
+          REST, React and Vue among other.
+        </p>
+      </section>
+
+      <blockquote>
+        <p>Done is better than perfect<br />-Peter McKinnon</p>
+      </blockquote>
+
+      <section class="left">
+        <h2>👨‍🔧 Previous Work History</h2>
+
+        <h3>Freelancing photographer</h3>
+        <p>
+          I have worked for couple of years as a freelancing
+          photographer/videographer doing small photo ops for clients
+        </p>
+        <h3>Preem</h3>
+        <p>
+          I worked as a retail worker and my responsibilities were to handle
+          sales, customer contact and the day to day running of the business.
+        </p>
+        <h3>Scandinavian Photo</h3>
+        <p>
+          Here I work as a salesperson of photo and video equipment and my
+          responsibilities are handling general sales, customer support and
+          logistics.
+        </p>
+      </section>
+
+      <blockquote>
+        <p>Thanks for visiting!</p>
+      </blockquote>
+    </main>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
